android/build_log_4.txt
> Task :gradle:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :gradle:pluginDescriptors
> Task :gradle:processResources

> Task :gradle:compileKotlin
w: file:///D:/flutter/packages/flutter_tools/gradle/src/main/kotlin/FlutterPlugin.kt:11:37 'ApkVariant' is deprecated. Deprecated in Java
w: file:///D:/flutter/packages/flutter_tools/gradle/src/main/kotlin/FlutterPlugin.kt:609:69 'ApkVariant' is deprecated. Deprecated in Java
w: file:///D:/flutter/packages/flutter_tools/gradle/src/main/kotlin/plugins/PluginHandler.kt:186:64 Unchecked cast: NamedDomainObjectContainer<out BuildType> to NamedDomainObjectContainer<BuildType>
w: file:///D:/flutter/packages/flutter_tools/gradle/src/main/kotlin/plugins/PluginHandler.kt:187:69 Unchecked cast: NamedDomainObjectContainer<out BuildType> to NamedDomainObjectContainer<BuildType>

> Task :gradle:compileJava NO-SOURCE
> Task :gradle:compileGroovy NO-SOURCE
> Task :gradle:classes
> Task :gradle:jar

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:DebugMinSdkCheck
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:compileFlutterBuildDebug
> Task :app:packJniLibsflutterBuildDebug
> Task :app:cleanMergeDebugAssets
> Task :app:checkDebugAarMetadata
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:copyFlutterAssetsDebug
> Task :app:generateDebugResValues
> Task :app:mapDebugSourceSetPaths
> Task :app:generateDebugResources
> Task :app:packageDebugResources
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:outputDebugAppLinkSettings
> Task :app:processDebugManifest
> Task :app:javaPreCompileDebug
> Task :app:desugarDebugFileDependencies
> Task :app:checkDebugDuplicateClasses
> Task :app:configureCMakeDebug[arm64-v8a]
> Task :app:buildCMakeDebug[arm64-v8a]
> Task :app:mergeLibDexDebug
> Task :app:configureCMakeDebug[armeabi-v7a]
> Task :app:buildCMakeDebug[armeabi-v7a]
> Task :app:configureCMakeDebug[x86_64]
> Task :app:buildCMakeDebug[x86_64]
> Task :app:mergeDebugJniLibFolders
> Task :app:validateSigningDebug
> Task :app:writeDebugAppMetadata
> Task :app:mergeDebugResources
> Task :app:writeDebugSigningConfigVersions
> Task :app:processDebugManifestForPackage
> Task :app:compressDebugAssets
> Task :app:processDebugResources
> Task :app:mergeExtDexDebug
> Task :app:compileDebugKotlin

> Task :app:compileDebugJavaWithJavac FAILED
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:67: error: cannot find symbol
        setContentView(R.layout.activity_ecg);
                        ^
  symbol:   variable layout
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:69: error: cannot find symbol
        mSwitchECGEnabled = (Switch) findViewById(R.id.switchECGEnabled);
                                                   ^
  symbol:   variable id
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:72: error: cannot find symbol
        mSpinnerSampleRates = (Spinner) findViewById(R.id.spinnerSampleRates);
                                                      ^
  symbol:   variable id
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:74: error: cannot find symbol
        Toolbar toolbar = (Toolbar) findViewById(R.id.toolbar);
                                                  ^
  symbol:   variable id
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:87: error: cannot find symbol
        GraphView graph = (GraphView) findViewById(R.id.graphECG);
                                                    ^
  symbol:   variable id
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:163: error: cannot find symbol
                        HRResponse hrResponse = new Gson().fromJson(
                        ^
  symbol: class HRResponse
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:164: error: cannot find symbol
                                data, HRResponse.class);
                                      ^
  symbol: class HRResponse
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:168: error: cannot find symbol
                            ((TextView) findViewById(R.id.textViewHR)).setText("" + hr);
                                                      ^
  symbol:   variable id
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:169: error: cannot find symbol
                            ((TextView) findViewById(R.id.textViewIBI)).setText(hrResponse.body.rrData.length > 0
                                                      ^
  symbol:   variable id
  location: class R
D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:197: error: cannot find symbol
        final GraphView graph = (GraphView) findViewById(R.id.graphECG);
                                                          ^
  symbol:   variable id
  location: class R
Note: D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors

> Task :app:mergeDebugNativeLibs

[Incubating] Problems report is available at: file:///D:/ecg_flutter_app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:67: error: cannot find symbol
          setContentView(R.layout.activity_ecg);
                          ^
    symbol:   variable layout
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:69: error: cannot find symbol
          mSwitchECGEnabled = (Switch) findViewById(R.id.switchECGEnabled);
                                                     ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:72: error: cannot find symbol
          mSpinnerSampleRates = (Spinner) findViewById(R.id.spinnerSampleRates);
                                                        ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:74: error: cannot find symbol
          Toolbar toolbar = (Toolbar) findViewById(R.id.toolbar);
                                                    ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:87: error: cannot find symbol
          GraphView graph = (GraphView) findViewById(R.id.graphECG);
                                                      ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:168: error: cannot find symbol
                              ((TextView) findViewById(R.id.textViewHR)).setText("" + hr);
                                                        ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:169: error: cannot find symbol
                              ((TextView) findViewById(R.id.textViewIBI)).setText(hrResponse.body.rrData.length > 0
                                                        ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:197: error: cannot find symbol
          final GraphView graph = (GraphView) findViewById(R.id.graphECG);
                                                            ^
    symbol:   variable id
    location: class R
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:163: error: cannot find symbol
                          HRResponse hrResponse = new Gson().fromJson(
                          ^
    symbol: class HRResponse
  D:\ecg_flutter_app\android\app\src\main\java\com\movesense\samples\ecgsample\ECGActivity.java:164: error: cannot find symbol
                                  data, HRResponse.class);
                                        ^
    symbol: class HRResponse
  10 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 28s
44 actionable tasks: 44 executed
